--- a/css/style.css
+++ b/css/style.css
@@ -2758,7 +2758,7 @@ hamburger
   width: 100%;
   position: relative;
   transform-style: preserve-3d;
-  background: #fafafa;
+  background: #f4f4f4;
   padding: 10vh 5vw;
 }
 @media (min-width: 820px) {
@@ -2769,175 +2769,57 @@ hamburger
 .contact .contact-header {
   width: 100%;
   height: auto;
-  background: #fafafa;
+  background: #f4f4f4;
   z-index: 10;
 }
 .contact .contact-items {
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 10vh;
+  width: 100%;
+  margin-top: 5vh;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .contact .contact-items {
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    margin: 5vh auto;
-    gap: 1rem;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 .contact .contact-items .contact-item {
+  padding: 0.5rem;
+  padding: 0.25rem 0.5rem 1rem 1rem;
   background: #fff;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  gap: 1rem;
-  color: #15191e;
-  text-align: center;
-  position: relative;
-  border-radius: 0.5rem;
-  transform: preserve-3d;
-  overflow: hidden;
-  transition: 0.5s ease;
-  isolation: isolate;
-  box-shadow: 0rem 0.5rem 1rem rgba(41, 50, 60, 0.2);
-}
-@media (min-width: 576px) {
-  .contact .contact-items .contact-item {
-    gap: 1rem;
-    border-color: transparent;
-  }
+  border-radius: 0.25rem;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.05);
+  transition: 0.25s;
 }
 .contact .contact-items .contact-item .title {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: left;
-  justify-content: space-evenly;
-  background: #15191e;
-  padding: 0.5rem;
-  flex-basis: 35%;
-  border-radius: 0.5rem;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-@media (min-width: 768px) {
-  .contact .contact-items .contact-item .title {
-    flex-basis: 40%;
-    align-items: center;
-    padding: 1rem;
-  }
-}
-.contact .contact-items .contact-item .title .icon {
-  margin: 0.5rem auto 1rem;
-  padding: 0.3em 0.7em;
-  height: 4em;
-  width: 4em;
-  border: none;
-  background: #29323d;
-  border-radius: 50%;
-  position: relative;
-  display: grid;
-  place-items: center;
-  transition: 0.5s ease;
-  position: relative;
-}
-.contact .contact-items .contact-item .title .icon i {
-  font-size: 1.5rem;
-  color: #f4f4f4;
-  transition: 0.5s ease;
-}
-@media (min-width: 768px) {
-  .contact .contact-items .contact-item .title .icon {
-    height: 4rem;
-    width: 4rem;
-    margin: 0;
-    padding: 0;
-  }
-}
-.contact .contact-items .contact-item .title h3 {
-  color: #f4f4f4;
-  color: #b3c0cc;
-  font-size: 0.85rem;
-  font-weight: 600;
-  position: relative;
-  text-transform: uppercase;
-}
-@media (min-width: 768px) {
-  .contact .contact-items .contact-item .title h3 {
-    font-size: 1rem;
-    margin: 0.5em auto 0;
-  }
-}
-.contact .contact-items .contact-item .contact-info {
-  flex-basis: 70%;
-  padding: 1rem 0;
-}
-.contact .contact-items .contact-item .contact-info h4 {
   text-transform: capitalize;
-  text-align: left;
-  margin-bottom: 0.25rem;
-  font-size: clamp(1.1rem, 1.5vw, 1.225rem);
+  font-size: 1rem;
+  transition: 0.25s;
+}
+.contact .contact-items .contact-item .title i {
+  transform: translateY(-1rem) scale(1.1);
+  font-size: 2rem;
+  transition: 0.25s;
+  filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.2));
+  margin-bottom: 0.5rem;
 }
 .contact .contact-items .contact-item .contact-info p {
-  font-size: 1rem;
-  font-weight: 500;
-  margin-bottom: 0.5rem;
-  color: #1f252d;
-  color: #000;
-  transition: 0.5s ease;
-  position: relative;
-  text-align: left;
-  z-index: -1;
+  margin: 0.5rem 0;
 }
-.contact .contact-items .contact-item .contact-info p span {
-  display: block;
-  margin-top: 0.2em;
-  color: #000;
-  color: inherit;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .contact .contact-items .contact-item .contact-info p {
-    width: 100%;
-    margin: 0.5em auto;
-    font-size: 0.9em;
-  }
-}
-.contact .contact-items .contact-item .contact-info a i {
-  opacity: 0.3;
-  transition: 1s ease;
-}
-.contact .contact-items .contact-item:nth-child(1) {
-  cursor: help;
-}
-.contact .contact-items .contact-item:nth-child(2) {
-  cursor: alias;
-}
-.contact .contact-items .contact-item:nth-child(3) {
-  cursor: alias;
+.contact .contact-items .contact-item .contact-info .btn i {
+  opacity: 0.5;
+  transition: 0.25s;
 }
 .contact .contact-items .contact-item:hover {
-  box-shadow: 0rem 0.25rem 0.5rem rgba(41, 50, 60, 0.2);
+  transform: scale(0.99);
 }
-.contact .contact-items .contact-item:hover .title .icon {
-  background: #15191e;
-  border: 1px solid rgba(179, 191, 203, 0.5);
+.contact .contact-items .contact-item:hover .title i {
+  transform: translateY(0rem) scale(1);
+  filter: drop-shadow(0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.25));
 }
-.contact .contact-items .contact-item:hover .title .icon::after {
-  opacity: 0;
-  transition: 1s;
-}
-.contact .contact-items .contact-item:hover .title .icon i {
-  transform: scale(0.95);
-}
-.contact .contact-items .contact-item:hover .contact-info a {
+.contact .contact-items .contact-item:hover .contact-info .btn i {
   opacity: 1;
-}
-.contact .contact-items .contact-item:hover .contact-info a i {
-  opacity: 1;
-  transition: 0.25s;
 }
 
 #projects {
