--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -29,6 +29,7 @@
             width: 100%;
             @include md {
                 grid-template-columns: 1fr 1fr 1fr;
+                column-gap: 5vw;
             }
             // display: flex;
             // flex-direction: column;
