bottom nav desktop none

--- a/css/style.css
+++ b/css/style.css
@@ -396,8 +396,9 @@ hamburger
   transform: translateY(15vh);
   transition: 1s;
 }
-@media (min-width: 768px) {
+@media (min-width: 820px) {
   .bottom-nav {
+    display: none;
     height: 7vh;
   }
 }
