--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,24 @@ hamburger
   transition: 0.25s;
   padding: 0.5rem 2rem;
   transition: 0.25s;
+  width: 100%;
+  cursor: default;
   border-radius: 0.5rem;
+  position: relative;
+}
+.bottom-nav .link-item a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #29323d;
+  border-radius: 0.5rem;
+  z-index: -1;
+  transition: 0.125s;
+  transform: scaleX(0.5);
+  opacity: 0;
 }
 .bottom-nav .link-item a i {
   font-size: 1.125rem;
@@ -437,29 +454,12 @@ hamburger
     padding: 0.5rem 5rem;
   }
 }
-@media (max-width: 768px) {
-  .bottom-nav .link-item:hover a {
-    background: #29323d;
-  }
-  .bottom-nav .link-item:hover i {
-    color: #f4f4f4;
-  }
+.bottom-nav .link-item a:active {
+  transition: 0.5s;
 }
-@media (min-width: 768px) {
-  .bottom-nav .link-item {
-    transform: scale(1.05);
-  }
-  .bottom-nav .link-item:hover a {
-    border: 1px solid #b3c0cc;
-  }
-  .bottom-nav .link-item:hover a:hover {
-    border: none;
-    background: hwb(211 28% 61%);
-  }
-  .bottom-nav .link-item:hover i {
-    color: #ead2a1;
-    color: #f4f4f4;
-  }
+.bottom-nav .link-item a:active::after {
+  opacity: 0.5;
+  transform: scaleX(1);
 }
 .bottom-nav.active-bottom-nav {
   transform: translateY(0vh);
