bottom-nav active opacity

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ hamburger
   transition: 0.5s;
 }
 .bottom-nav .link-item a:active::after {
+  opacity: 1;
   transform: scaleX(1);
 }
 .bottom-nav.active-bottom-nav {
