--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -501,7 +501,7 @@ hamburger
                 transition: .5s;
                 &::after {
                     // animation: click .125s forwards;
-                    // opacity: .8;
+                    opacity: 1;
                     transform: scaleX(1);
                 }
             }
