--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -54,9 +54,9 @@
                     i {
                         transform: translateY(-1rem) scale(1.1);
                         font-size: 2rem;
-                        transition: .25s;
                         filter: drop-shadow(.25rem .25rem .25rem rgba(0, 0, 0, .2));
                         margin-bottom: .5rem;
+                        transition: .25s ease-in-out;
                     }
                 }
 
@@ -79,7 +79,7 @@
                     .title {
                         i {
                             transform: translateY(0rem) scale(1);
-                            filter: drop-shadow(.125rem .125rem .125rem rgba(0, 0, 0, .25));
+                            filter: drop-shadow(.125rem .125rem .125rem rgba(0, 0, 0, .35));
                         }
                     }
 
