--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -399,12 +399,12 @@
                         }
                         a {
                             color: $text-light;
-                            cursor: pointer;
+                            transition: .25s;
                         }
                         
                         &:hover {
                             a {
-                                color: $brand;;
+                                color: $brand;
                             }
                             i {
                                 color: $text-light;
