--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,7 @@ hamburger
   width: 100%;
   height: 100%;
   background: #29323d;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   z-index: -1;
   transition: 0.125s;
   transform: scaleX(0.5);
@@ -455,11 +455,14 @@ hamburger
   }
 }
 .bottom-nav .link-item a:active {
-  transition: 0.5s;
+  transition: 0.25s;
 }
 .bottom-nav .link-item a:active::after {
   opacity: 1;
   transform: scaleX(1);
+}
+.bottom-nav .link-item a:hover i {
+  color: #f4f4f4;
 }
 .bottom-nav.active-bottom-nav {
   transform: translateY(0vh);
