--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -479,7 +479,7 @@ hamburger
                 width: 100%;
                 height: 100%;
                 background: $overlay-blue-dark;
-                border-radius: .5rem;
+                border-radius: 1rem;
                 z-index: -1;
                 transition: .125s;
                 transform: scaleX(.5);
@@ -498,11 +498,16 @@ hamburger
 
             // HOVER AND ACTIVE
             &:active {
-                transition: .5s;
+                transition: .25s;
                 &::after {
                     // animation: click .125s forwards;
                     opacity: 1;
                     transform: scaleX(1);
+                }
+            }
+            &:hover {
+                i {
+                    color: $text-light;
                 }
             }
 
