--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -45,8 +45,8 @@ form {
             font-weight: 500;
             letter-spacing: .15em;
             background: $overlay-blue-darker;
-            outline: 2px solid $span-gold;
-            color: $span-gold;
+            outline: 1px solid $brand;
+            color: $text-light;
             // overflow: hidden;
 
             &:invalid {
