--- a/css/style.css
+++ b/css/style.css
@@ -1049,56 +1049,6 @@ hamburger
   z-index: 1;
   overflow: hidden;
 }
-@media (max-width: 768px) {
-  .banner.index-banner::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
-    background-repeat: no-repeat;
-  }
-}
-@media (max-width: 768px) and (max-width: 768px) {
-  .banner.index-banner::after {
-    background-size: 90%;
-    background-size: contain;
-    background-size: cover;
-    background-position: 10% bottom;
-    opacity: 0.5;
-    z-index: -1;
-  }
-}
-@media (min-width: 768px) {
-  .banner.index-banner {
-    background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
-    background-position: center left;
-    background-position: 10% 45%;
-    background-attachment: fixed;
-  }
-  .banner.index-banner::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background: radial-gradient(transparent, #000);
-    background-attachment: fixed;
-  }
-  @keyframes desktopIntro {
-    0% {
-      background-position: 50% 50%;
-    }
-    100% {
-      background-position: 10% 50%;
-    }
-  }
-}
 @media (max-width: 1024px) {
   .banner.about-banner::after {
     position: absolute;
@@ -1145,11 +1095,11 @@ hamburger
     mix-blend-mode: overlay;
   }
 }
-.banner .hero {
-  position: relative;
+
+.hero {
   color: #fff;
 }
-.banner .hero .hero-content {
+.hero .hero-content {
   background: transparent;
   padding: 5vh 5vw;
   position: relative;
@@ -1158,28 +1108,28 @@ hamburger
   text-transform: capitalize;
 }
 @media (min-width: 768px) {
-  .banner .hero .hero-content {
+  .hero .hero-content {
     width: max-content;
     top: 5vh;
   }
 }
 @media (min-width: 1024px) {
-  .banner .hero .hero-content {
+  .hero .hero-content {
     top: 15vh;
   }
 }
-.banner .hero .hero-content .hero-title {
+.hero .hero-content .hero-title {
   margin-bottom: 0.25rem;
   width: 100%;
 }
-.banner .hero .hero-content .hero-title .hero-title-header {
+.hero .hero-content .hero-title .hero-title-header {
   line-height: 1.25;
   font-size: 0.95rem;
   font-size: clamp(.95rem, 2vw, 1.1rem);
   font-weight: 400;
   color: #b3c0cc;
 }
-.banner .hero .hero-content .hero-title .hero-title-header a {
+.hero .hero-content .hero-title .hero-title-header a {
   color: inherit;
   font-size: inherit;
 }
@@ -1196,7 +1146,7 @@ hamburger
     transform: translateY(0);
   }
 }
-.banner .hero .hero-content .hero-title .hero-description {
+.hero .hero-content .hero-title .hero-description {
   text-transform: capitalize;
   text-align: center;
   text-align: left;
@@ -1222,15 +1172,15 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .banner .hero .hero-content .hero-title {
+  .hero .hero-content .hero-title {
     top: 15vh;
   }
-  .banner .hero .hero-content .hero-title p {
+  .hero .hero-content .hero-title p {
     text-align: center;
     text-align: left;
   }
 }
-.banner .hero .hero-content .hero-meta-description {
+.hero .hero-content .hero-meta-description {
   display: inline-block;
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2.25vw, 1.5rem);
@@ -1252,7 +1202,7 @@ hamburger
     opacity: 1;
   }
 }
-.banner .hero .hero-cta {
+.hero .hero-cta {
   background: #dc143c;
   margin: 20vh 0 0;
   position: relative;
@@ -1271,17 +1221,17 @@ hamburger
   z-index: 2;
 }
 @media (max-width: 576px) {
-  .banner .hero .hero-cta {
+  .hero .hero-cta {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 576px) {
-  .banner .hero .hero-cta {
+  .hero .hero-cta {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 768px) {
-  .banner .hero .hero-cta {
+  .hero .hero-cta {
     font-size: 1.5em;
     width: 20rem;
     text-align: center;
@@ -1289,7 +1239,7 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .banner .hero .hero-cta {
+  .hero .hero-cta {
     margin: 15vh 0 0;
   }
 }
@@ -1306,7 +1256,7 @@ hamburger
     transform: translateX(0);
   }
 }
-.banner .hero .hero-cta::before, .banner .hero .hero-cta::after {
+.hero .hero-cta::before, .hero .hero-cta::after {
   position: absolute;
   content: "";
   top: 0;
@@ -1318,11 +1268,11 @@ hamburger
   border: none;
   outline: none;
 }
-.banner .hero .hero-cta::before {
+.hero .hero-cta::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #750b20, #dd134c);
 }
-.banner .hero .hero-cta::after {
+.hero .hero-cta::after {
   opacity: 1;
   z-index: -1;
   animation: 3s cta-btn infinite;
@@ -1333,7 +1283,7 @@ hamburger
   background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
-.banner .hero .hero-cta span {
+.hero .hero-cta span {
   position: relative;
   display: inline-block;
   text-transform: none;
@@ -1360,33 +1310,33 @@ hamburger
   }
 }
 @media (max-width: 820px) {
-  .banner .hero .hero-cta:active {
+  .hero .hero-cta:active {
     transition: 0.2s;
     transform: scale(0.95);
   }
-  .banner .hero .hero-cta:active::before {
+  .hero .hero-cta:active::before {
     opacity: 0;
   }
-  .banner .hero .hero-cta:active::after {
+  .hero .hero-cta:active::after {
     opacity: 1;
   }
 }
 @media (min-width: 820px) {
-  .banner .hero .hero-cta:hover {
+  .hero .hero-cta:hover {
     transition: 0.2s;
     transform: scale(0.95);
     border-top-right-radius: 5rem;
   }
-  .banner .hero .hero-cta:hover::before {
+  .hero .hero-cta:hover::before {
     border-top-right-radius: 5rem;
     opacity: 0;
   }
-  .banner .hero .hero-cta:hover::after {
+  .hero .hero-cta:hover::after {
     border-top-right-radius: 5rem;
     opacity: 1;
   }
 }
-.banner .hero .hero-index-content {
+.hero .hero-index-content {
   padding: 5vh 5vw;
   position: relative;
   top: 10vh;
@@ -1394,61 +1344,90 @@ hamburger
   text-transform: capitalize;
 }
 @media (min-width: 820px) {
-  .banner .hero .hero-index-content {
+  .hero .hero-index-content {
     top: 10vh;
   }
 }
-.banner .hero .hero-index-content span {
+.hero .hero-index-content span {
   color: #b3c0cc;
 }
-.banner .hero .hero-index-content .content-title {
+.hero .hero-index-content .content-title {
   margin-bottom: 25vh;
 }
 @media (min-width: 820px) {
-  .banner .hero .hero-index-content .content-title {
+  .hero .hero-index-content .content-title {
     margin-bottom: 15vh;
   }
 }
-.banner .hero .hero-index-content .content-title h1 {
+.hero .hero-index-content .content-title h1 {
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.2rem);
   font-weight: 200;
   margin-bottom: 0.25rem;
 }
-.banner .hero .hero-index-content .content-title h2 {
+.hero .hero-index-content .content-title h2 {
   font-size: 2rem;
   font-size: clamp(2rem, 5vw, 2.8rem);
 }
-.banner .hero .hero-index-content .content-value p {
+.hero .hero-index-content .content-value p {
   color: #fff;
   font-weight: 500;
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.12rem);
 }
-.banner .hero .hero-index-content .content-value .cta {
+.hero .hero-index-content .content-value .cta {
   width: 12rem;
   margin-top: 1rem;
 }
 @media (min-width: 820px) {
-  .banner .hero .hero-index-content .content-value .cta {
+  .hero .hero-index-content .content-value .cta {
     width: 14rem;
   }
 }
-.banner .hero .hero-index-content .content-value .cta .btn {
+.hero .hero-index-content .content-value .cta .btn {
   width: 100%;
   color: #fff;
   padding: 1rem;
   font-weight: 600;
   font-size: 1rem, 3vw, 1.25rem;
 }
-.banner .hero .hero-index-content .content-value .cta .btn i {
+.hero .hero-index-content .content-value .cta .btn i {
   color: #fff;
 }
-.banner .hero .hero-index-content .content-value .cta .btn::before {
+.hero .hero-index-content .content-value .cta .btn::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
 }
-.banner .hero .hero-index-content .content-value .cta .btn::after {
+.hero .hero-index-content .content-value .cta .btn::after {
   background: linear-gradient(0deg, #dc134c, #750b20);
+}
+.hero .hero-image {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: #29323d;
+}
+.hero .hero-image img {
+  mix-blend-mode: overlay;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: 10% 50%;
+}
+@media (min-width: 1024px) {
+  .hero .hero-image {
+    background: #0a0d0f;
+    background: #000;
+  }
+  .hero .hero-image img {
+    mix-blend-mode: unset;
+    object-fit: contain;
+    object-fit: cover;
+    width: 100%;
+    object-position: 10% 40%;
+    opacity: 0.8;
+    position: relative;
+    right: -20vw;
+  }
 }
 
 .skills-hero {
@@ -4574,6 +4553,9 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   color: #1f252d;
+}
+body img {
+  max-width: 100%;
 }
 body a {
   text-decoration: none;
