--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -118,11 +118,12 @@
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            padding: 1rem 5vw;
+            padding: .5rem 5vw;
             z-index: 5;
             @include xsm {
                 padding: .5rem 5vw;
             }
+
             // HEADER LOGO
             .logo {
                 transition: 1s ease;
