--- a/css/style.css
+++ b/css/style.css
@@ -2605,7 +2605,7 @@ hamburger
     background: #fafafa;
   }
   .skill-section .skill-section-title.section-title-4::after {
-    background-image: url("../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg");
+    background-image: url("../img/laptop-coffee.jpg");
     background-position: bottom right;
     background-position: center;
     background-repeat: no-repeat;
