--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -977,7 +977,7 @@
                 background: #fafafa;
 
                 &::after {
-                    background-image: url('../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg');
+                    background-image: url('../img/laptop-coffee.jpg');
                     background-position: bottom right;
                     background-position: center;
                     background-repeat: no-repeat;
