--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Montserrat:wght@100;200;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap");
 .btn-bg::before, .btn-bg::after {
   content: "";
   position: absolute;
@@ -1289,7 +1289,6 @@ hamburger
   text-transform: none;
   color: #f4f4f4;
   font-family: "Montserrat", sans-serif;
-  font-family: "Kanit", sans-serif;
   font-size: 2.5rem;
   font-weight: 500;
   animation: animate 3s ease-in-out infinite;
@@ -4546,10 +4545,10 @@ form button:hover::after {
 
 html {
   scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
   color: #1f252d;
 }
 body img {
