--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Montserrat:wght@100;200;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap');
 
 @import 'variables';
 @import 'mixin';
@@ -22,9 +22,9 @@
 
 html {
     scroll-behavior: smooth;
+    font-family: $font-content;
 }
 body {
-    font-family: $font-content;
     color: $overlay-blue-darker;
 
     img {
