--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,6 +1,5 @@
 // about 
 .about {
-    // FLEX CONTAINER
     // border: 2px solid red;
     display: flex;
     flex-direction: column-reverse;
@@ -14,9 +13,6 @@
     @include md {
         flex-direction: row;
         align-items: flex-start;
-        // padding: 5vh 5vw;
-        // border: 2px solid red;
-        // overflow: hidden;
     }
     // COL RIGHT = TITLE & ARTICLE
     .col-right {
@@ -293,13 +289,11 @@
         // end of cv download button on h2 hover 
 
     }
-    // end of col-right
     // COL LEFT = ABOUT IMAGE(S)
     .col-left {
-        // display: none;
         // border: 2px solid red;
+        border-radius: .25rem;
         width: 100%;
-        height: 360px;
         height: 70vh;
         margin-top: 0;
         z-index: 20;
@@ -313,110 +307,62 @@
         }
         // about images
         .about-img {
-            border: 2px solid blue;
-            height: 100%;
-            width: 100%;
-            position: relative;
-            border-radius: 10px;
             border: none;
+            // border: 2px solid blue;
+            width: 100%;
+            height: 100%;
+            margin-inline: auto;
+            position: relative;
+            border-radius: .25rem;
             transition: .5s ease;
             transform: preserve-3d;
-            // overflow: hidden;
+            overflow: hidden;
             
             img {
-            // border: 2px solid $overlay-blue-light;
-                // display: none;
-                width: 100%;
+                $fade-speed: 2s;
+                position: absolute;
+                inset: 0;
                 height: 100%;
-                border-radius: .25rem;
+                width: 100%;
                 object-fit: cover;
+                object-position: center;
+                border-radius: .25rem;
+                transition: 1s;
+                animation: fade-1 4s infinite;
+                    @keyframes fade-1 {
+                        50% {
+                            opacity: 0;
+                        }
+                    }
+                
+                &.about-img-2 {
+                    opacity: 0;
+                    object-position: top;
+                    animation: fade-2 4s infinite;
+                    @keyframes fade-2 {
+                        50% {
+                            opacity: 1;
+                        }
+                    }
+                }
+
+                // DESKTOP IMAGE
                 @include sm {
                     object-fit: contain;
                 }
-                @include md {
-                    object-fit: cover;
-                    width: 20rem;
-                }
-            }
-        // image hover states
-        // &:hover {
-        //     &::before {
-        //         opacity: 1;
-        //         transform: scale(1.1);
-        //         transform-origin: left;
-        //     }
-        //     &::after {
-        //         opacity: 0;
-        //     }
-        // }
-        // end of image hover states
-
-        &.animated-img {
-            // border: 2px solid red;
-            img {
-                opacity: 0;
-            }
-            &::before,
-            &::after {
-                font-size: 1em;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                text-align: left;
-                font-weight: 500;
-                font-style: italic;
-                padding: .3em;
-                border-radius: .5rem;
-                transition: 1s ease;
-                background-repeat: no-repeat;
-                background-size: cover;
-
-                @include sm {
-                    background-size: contain;
-                }
             }
 
-            &::before {
-                content: 'Boitumelo Sempe';
-                content: '';
-                background-image: url('../img/me-min.jpg');
-                background-position: center;
-                animation: fade-out 5s infinite;
-
-                @keyframes fade-out {
-                    0% {
-                        transform-origin: right;
-                    }
-
-                    50% {
+            &:hover {
+                img {
+                    opacity: 1;
+                    animation: none;
+                    &.about-img-2 {
                         opacity: 0;
+                        animation: none;
+                    }
                     }
                 }
-            }
 
-            &::after {
-                position: absolute;
-                content: 'Shakex Sempe';
-                content: '';
-                color: $span-blue;
-                opacity: 0;
-                background-image: url('../img/shakexblue-min.jpg');
-                background-position: top;
-                transition: 1s ease;
-                animation: fade-in 5s infinite;
-
-                @keyframes fade-in {
-                    50% {
-                        opacity: 1;
-                    }
-                }
-            }
-        }
     }
-        // end of about images
     }
-    // end of col-left (about image)
 }
-// end of about
